--- a/html/paper/index.html
+++ b/html/paper/index.html
@@ -33,13 +33,13 @@
 	<div align="center" style="margin:0 auto;">
 		<h1>Publications</h1>
 		<a href="http://creativecommons.org/licenses/by-sa/3.0/deed.es_ES" title="License of text on this page" class="COPYRIGHT"><img src="/img/cc-by-sa.png" style="width:88px; height=31px; vertical-align:middle;" alt="CC BY-SA" /></a>
-		<a href="https://openswad.org/en?usr=@acanas" target="_blank">Antonio Ca&ntilde;as Vargas</a>, 1999-2018
+		<a href="https://openswad.org/?usr=@acanas" target="_blank">Antonio Ca&ntilde;as Vargas</a>, 1999-2019
 	</div>
 
 	<p>
 	Please use one of the following references when you mention SWAD in your publications.
 	If you know any other publication in which the SWAD platform is mentioned,
-	contact <a href="http://www.ugr.es/~acanas/">Antonio Ca&ntilde;as Vargas</a>
+	contact <a href="https://openswad.org/?usr=@acanas">Antonio Ca&ntilde;as Vargas</a>
 	to include it in this list.
 	</p>
 
@@ -54,16 +54,81 @@ https://www.researchgate.net/publication/303804256_El_Tablon_de_Docencia_y_la_Pl
 
 -->
 
+	<dt><h3>2019</h3></dt>
+
+		<dd><dl>
+
+		<dt>17. [Ca&ntilde;as et al. 2019]</dt>
+			<dd>
+			<a href="http://www.ugr.es/~acanas/">Ca&ntilde;as, A.</a>,
+			<a href="http://directorio.ugr.es/static/PersonalUGR/*/show/1824b4c05eb4ef26142156036280265b">Mart&iacute;nez Ortigosa, E.</a>,
+			Prieto, B.,
+			Pino, B.,
+			Prieto, A.<br />
+			<strong>SWAD, an Open Learning Management System: Results and Challenges.</strong><br />
+			In J. Theo Bastiaens (Ed.), Proceedings of EdMedia + Innovate Learning, pp. 1496-1509<br />
+			Amsterdam, Netherlands: Association for the Advancement of Computing in Education (AACE), 2019.<br />
+			URI: <a href="https://www.learntechlib.org/primary/p/210166/">https://www.learntechlib.org/primary/p/210166/</a>
+			</dd>
+	
+		</dl>
+
+
+	<dt><h3>2018</h3></dt>
+
+		<dd><dl>
+
+		<dt>16. [Ca&ntilde;as et al. 2018b]</dt>
+			<dd>
+			<a href="http://www.ugr.es/~acanas/">A. Ca&ntilde;as</a>,
+			Boyero, J. M.,
+			Calandria, D. J.,
+			<a href="http://directorio.ugr.es/static/PersonalUGR/*/show/1824b4c05eb4ef26142156036280265b">Ortigosa, E. M.</a>,
+			Fern&aacute;ndez, J.,
+			D&iacute;az, A. F.,
+			Romero, S.,
+			Mesa, J.,
+			Lara, A.<br />
+			<strong>Funcionalidad, implementaci&oacute;n y l&iacute;neas de desarrollo
+			de la plataforma educativa SWAD/OpenSWAD.</strong><br />
+			Ense&ntilde;anza y Aprendizaje de Ingenier&iacute;a de Computadores, N.&ordm; 8, pp. 145-184, 2018.<br />
+
+			URI: <a href="http://hdl.handle.net/10481/53300">http://hdl.handle.net/10481/53300</a>
+			</dd>
+
+		<dt>15. [Ca&ntilde;as et al. 2018a]</dt>
+			<dd>
+			<a href="http://www.ugr.es/~acanas/">A. Ca&ntilde;as</a>,
+			<a href="http://directorio.ugr.es/static/PersonalUGR/*/show/1824b4c05eb4ef26142156036280265b">Ortigosa, E. M.</a>,
+			Fern&aacute;ndez, J.,
+			Boyero, J. M.,
+			Anguita, M.,
+			Oca&ntilde;a, F. A.,
+			Gea, M.,
+			Fern&aacute;ndez, A. M.,
+			Garc&iacute;a, J.,
+			Damas, M.,
+			Ortega, J.,
+			Prieto, A.,<br />
+			<strong>Uso y difusi&oacute;n de la plataforma educativa SWAD/OpenSWAD
+			en la Universidad de Granada y en el mundo.</strong><br />
+			Ense&ntilde;anza y Aprendizaje de Ingenier&iacute;a de Computadores, N.&ordm; 8, pp. 117-144, 2018.<br />
+
+			URI: <a href="http://hdl.handle.net/10481/53303">http://hdl.handle.net/10481/53303</a>
+			</dd>
+	
+		</dl>
+		
 	<dt><h3>2017</h3></dt>
 
 		<dd><dl>
 		
-		<dt>14. [Ca&ntilde;as 2017b]</dt>
+		<dt>14. [Ca&ntilde;as et al. 2017b]</dt>
 			<dd>
 			<a href="http://www.ugr.es/~acanas/">A. Ca&ntilde;as</a>,
 			D. J. Calandria,
 			J. M. Boyero,
-			E. M. Ortigosa,
+			<a href="http://directorio.ugr.es/static/PersonalUGR/*/show/1824b4c05eb4ef26142156036280265b">E. M. Ortigosa</a>,
 			J. Fern&aacute;ndez,
 			F. A. Oca&ntilde;a<br />
 			<strong>18 years of development and use of the SWAD educational platform</strong><br />
@@ -76,7 +141,7 @@ https://www.researchgate.net/publication/303804256_El_Tablon_de_Docencia_y_la_Pl
 		<dt>13. [Ca&ntilde;as et al. 2017a]</dt>
 			<dd>
 			<a href="http://www.ugr.es/~acanas/">A. Ca&ntilde;as</a>,
-			E. M. Ortigosa,
+			<a href="http://directorio.ugr.es/static/PersonalUGR/*/show/1824b4c05eb4ef26142156036280265b">E. M. Ortigosa</a>,
 			J. M. Boyero,
 			J. Fern&aacute;ndez,
 			M. Anguita<br />
@@ -768,7 +833,62 @@ https://hera.ugr.es/tesisugr/2639280x.pdf
 	<h2>Other publications in which the SWAD platform is referred</h2>
 
 	<dl>
+	<dt><h3>2018</h3></dt>
+
+		<dd><dl>
+
+<!--
+Evaluación comparativa de la satisfacción del usuario de las plataformas Moodle y Edmodo, área matemática Aduni
+http://repositorio.ucv.edu.pe/bitstream/handle/UCV/12855/Reyes_PWW.pdf?sequence=1
+
+"LA ALFABETIZACIÓN DIGITAL DOCENTE Y LA INTEGRACIÓN DE LAS TIC’S EN EL CURRÍCULO DE EDUCACIÓN GENERAL
+BÁSICA"
+http://repositorio.uta.edu.ec/bitstream/123456789/27839/1/0604643932FALCONI%20GAVLANES%20PABLO%20DAVID.pdf
+
+USO DEL ENTORNO VIRTUAL DE APRENDIZAJE EN LOS ESTUDIANTES DE
+LA CARRERA PROFESIONAL DE EDUCACIÓN INICIAL DEL INSTITUTO
+SUPERIOR DE EDUCACIÓN PÚBLICO "IGNACIO AMADEO RAMOS OLIVERA"
+http://repositorio.uct.edu.pe/bitstream/123456789/309/1/018100271H_B_2018.pdf
+
+Algunas reflexiones sobre la utilización de plataformas virtuales de enseñanza
+https://dialnet.unirioja.es/descarga/articulo/6759672.pdf
+
+
+ENTORNO VIRTUAL DE APRENDIZAJE CENTRADO EN LA METÁFORA EDUCATIVA
+http://www.uct.unexpo.edu.ve/index.php/uct/article/download/810/655
+
+Ensayo sobre aulas virtuales: presente y futuro/Essay about virtual classroom: their present and future
+https://www.pag.org.mx/index.php/PAG/article/viewFile/777/1117
+
+
+Mixing Modern Teaching Methods with Online Marketing Tools for Romanian Students.
+-->
+		<dt>96. [Trejo Gonz&aacute;lez 2018]</dt>
+			<dd>
+			Hugo Trejo Gonz&aacute;lez<br />
+
+			<strong>Plataformas LMS basadas en la Nube: Schoology, Edmodo y Google Classroom.</strong><br />
+			In: Verbum et lingua, Revista electr&oacute;nica, Departamento de Lenguas Modernas,
+			Universidad de Guadalajara, M&eacute;xico, a&ntilde;o 6, n&uacute;m. 12, julio / diciembre 2018, pp. 114-146, ISSN 2007-7319<br />
+			<a href="http://www.verbumetlingua.cucsh.udg.mx/sites/default/files/VetL%2012.pdf">http://www.verbumetlingua.cucsh.udg.mx/sites/default/files/VetL%2012.pdf</a>
+			</dd>
+			
+		</dl></dd>
+
+	<dl>
 	<dt><h3>2017</h3></dt>
+
+<!--
+
+Ana María Ramos-García
+English for Academic Purposes: A Proposal to Improve Listening Skills of Education Students
+https://link.springer.com/chapter/10.1007/978-3-319-68926-5_7
+
+Cadena-Vela, S., Ortiz Herrera, J., & Torres Martínez, G. (2017). A step towards innovation at Central University of Ecuador: Implementation of the virtual educational platform. In J. M.
+Dodero, M. S. Ibarra Sáiz, & I. Ruiz Rube (Eds.), Fifth International Conference on Technological Ecosystems for Enhancing Multiculturality (TEEM’17) (Cádiz, Spain, October 18-20, 2017)
+(Article 75). New York, NY, USA: ACM. doi:10.1145/3144826.3145425
+
+-->
 
 		<dd><dl>
 
@@ -860,6 +980,9 @@ Rojas, F.J.; Cepero, M.; Zurita, F. y Chinchilla, J.L. (201x). Simulación del d
 profesional, recurso didáctico en docencia de ciencias del deporte / Simulation of professional
 performance,didactic tool in teaching sport sciences. Revista Internacional de Medicina y
 Ciencias de la Actividad Física y el Deporte vol. X (x) pp.xx Pendiente de publicación / In press.
+
+La importancia del uso de plataformas educativas, Mariela Viñas
+https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=23&ved=2ahUKEwjH9cGcmaDeAhWCzYUKHULqBYU4ChAWMAx6BAgEEAI&url=http%3A%2F%2Fsedici.unlp.edu.ar%2Fbitstream%2Fhandle%2F10915%2F61390%2FDocumento_completo__.pdf-PDFA.pdf%3Fsequence%3D1&usg=AOvVaw0L8Ui1M7SJL8OMFEnC7snQ
 
 -->
 	<dt><h3>2015</h3></dt>
