--- a/html/presentation/index.html
+++ b/html/presentation/index.html
@@ -14,23 +14,6 @@ table		{border-width:0px; border-style:none;}
 img		{border-width:0px; border-style:none;}
 .SWAD{font-family:Arial,DejaVu LGC Sans,Bitstream Vera Sans,sans-serif;color:#F8B000;font-size:16pt;font-weight:bold;}
   </style>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-40768375-1', 'openswad.org', {
-    'anonymizeIp': true,
-    'storage': 'none',
-    'clientId': window.localStorage.getItem('ga_clientId')
-  });
-  ga(function(tracker) {
-    window.localStorage.setItem('ga_clientID', tracker.get('clientId'));
-  });
-  ga('send', 'pageview');
-
-</script>
  </head>
 
  <body>
@@ -50,12 +33,22 @@ img		{border-width:0px; border-style:none;}
 	<td align="center" colspan="2">
 		<h1>Presentations</h1>
 		<a href="http://creativecommons.org/licenses/by-sa/3.0/deed.es_ES" title="License of text on this page" class="COPYRIGHT"><img src="/img/cc-by-sa.png" style="width:88px; height=31px; vertical-align:middle;" alt="CC BY-SA" /></a>
-		<a href="https://openswad.org/en?usr=@acanas" target="_blank">Antonio Ca&ntilde;as Vargas</a>, 1999-2018
+		<a href="https://openswad.org/en?usr=@acanas" target="_blank">Antonio Ca&ntilde;as Vargas</a>, 1999-2021
 	</td>
 	</tr>
 
 	<tr>
 	<td align="center">
+
+		<div style="width:595px; margin-bottom:50px;">
+		<h2>
+		<a href="https:////www.slideshare.net/acanas/swad-an-open-learning-management-system-243335901"
+		title="SWAD, an Open Learning Management System">
+		SWAD, an Open Learning Management System</a>
+		</h2>
+		<iframe src="https:////www.slideshare.net/slideshow/embed_code/key/egKx4wlBYyqr62" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen>
+		</iframe>
+		</div>
 
 		<div style="width:595px; margin-bottom:50px;">
 		<h2>
